--- a/RainbowLogo.html
+++ b/RainbowLogo.html
@@ -4,7 +4,6 @@
 <script src="https://docs.opencv.org/4.0.1/opencv.js"></script>
 <script language="JavaScript" type="text/javascript">
 function handleFiles(files) {
-    console.log(files.size);
     const file = files[0];       
     let reader = new FileReader();
     reader.onload = function (){
@@ -39,30 +38,21 @@ function drawImageInCanvas(file) {
 
         // TODO: rather than just inverse the binary image, we should use findContours
 
-        // load texure
-        let textureImg = new Image();
-        textureImg.src = 'rainbowFlag.png';
-        textureImg.onload = function () {
-            // draw the rainbow flag image to canvas input
-            let canvasTexture = document.getElementById("canvasTexture");
-            let contextTexture = canvasTexture.getContext('2d');
-            contextTexture.drawImage(textureImg, 0, 0, 200, 200);
+        // read rainbow flag to be used as texture
+        let textureImg = document.getElementById('textureImg');
+        let textureMat = cv.imread(textureImg);
 
-            let textureMat = cv.imread("canvasTexture");
+        // apply mask
+        let outputImg = textureMat.clone();
+        textureMat.copyTo(outputImg, maskImg); // this failed
+        cv.imshow('canvasOutput', outputImg);
 
-            // apply mask
-            let outputImg = new cv.Mat();
-            textureMat.copyTo(outputImg, maskImg);
-            cv.imshow('canvasOutput', outputImg);
-
-            // clean up
-            src.delete();
-            grayScaledImg.delete();
-            maskImg.delete();
-            textureMat.delete();
-            outputImg.delete();
-        };
-
+        // clean up
+        src.delete();
+        grayScaledImg.delete();
+        maskImg.delete();
+        textureMat.delete();
+        outputImg.delete();
     };
 }
 </script>
@@ -71,6 +61,7 @@ function drawImageInCanvas(file) {
 <body>
     
 <input type="file" id="input" accept="image/*" onchange="handleFiles(this.files)" />
+<img id="textureImg" width="500" height="500" crossorigin="anonymous" src="https://upload.wikimedia.org/wikipedia/commons/6/68/Gay_flag.svg" />
 
 <p>CanvasInput</p>
 <canvas id="canvasInput" width="200" height="200" style="border: solid 1px red;"></canvas>
